--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "private": true,
+  "build": "webpack",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
