--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "gsap": "^3.9.1",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "moment": "^2.29.1"
   }
 }
