--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/mostafakamar2308/newToDoListApp#readme",
   "devDependencies": {
+    "file-loader": "^6.2.0",
     "gsap": "^3.9.1",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2"
