added firebase finally to the project

--- a/package.json
+++ b/package.json
@@ -29,5 +29,7 @@
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "firebase-tools": "^10.2.1"
+  }
 }
